--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ theme:
   name: material
   features:
     - navigation.top
+    - navigation.sections
     - navigation.footer
     - navigation.path
     - navigation.indexes 
