--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,11 +60,12 @@ markdown_extensions:
 
 nav:
   - Server Authority: 
-    - Server Authority: index.md
-    - Services and Behaviors: main/aurora.md
-    - Credits: main/credits.md
+    - Server Authority and Rollback Netcode: index.md
+    - Working with Server Authority: howto.md
+    - Behaviors: main/aurora.md
   - Examples:
     - Examples: examples/index.md
     - Character Movement System: examples/character.md
+  - Credits: main/credits.md
 copyright: |
   &copy; 2025 <a href="https://github.com/TenebrisNoctua"  target="_blank" rel="noopener">Tenebris Noctua</a>
